--- a/contents/generalities/04-bias-variance.qmd
+++ b/contents/generalities/04-bias-variance.qmd
@@ -59,6 +59,32 @@ ggplot(data, aes(x, y)) +
 
 ```
 
+
+```{ojs}
+data = FileAttachment("../../include/data/data.csv").csv({ typed: true })
+
+viewof noise = Inputs.range(
+  [0.1, 0.5], 
+  {value: 0.3, step: 0.2, label: tex`\sigma^2`}
+)
+
+filtered = data.filter(function(df) {
+  return df.noise == noise;
+})
+
+true_curve = data.filter(function(df) {
+  return df.noise == 0;
+})
+
+Plot.plot({
+  marks: [
+    Plot.dot(filtered, {x: "x", y: "y"}),
+    Plot.line(true_curve, {x: "x", y: "y"})
+  ]
+})
+```
+
+
 Dans la suite du cours, nous verrons différentes méthodes permettant d'estimer la fonction $f$ à partir de données. Cependant avant d'étudier comment contruire un estimateur $\widehat{f}$ de $f$, nous allons nous interroger sur la qualité d'un tel estimateur : que signifie "bien estimer" $f$ ? Et comment évaluer la qualité de l'estimation ? 
 
 ::: {.callout-note icon=false}
@@ -230,7 +256,7 @@ ggplot() +
   geom_line(data = fit_df, aes(x, y_hat, color = span), size = 1.1) +
   scale_color_viridis_d(option = "C") +
   labs(
-    x = "Y", y = "Y",
+    x = "X", y = "Y",
     color = "Paramètre"
   ) +
   theme_minimal(base_size = 14)
