--- a/contents/generalities/04-bias-variance.qmd
+++ b/contents/generalities/04-bias-variance.qmd
@@ -19,6 +19,7 @@ $$Y = f(X) + \varepsilon.$$ {#eq-model}
 Ici, $f$ est une fonction déterministe (non-aléatoire) représentant l'information systématique que les variables explicatives $X_{1}, \dots, X_{p}$ apportent sur $Y$, et $\varepsilon$ est un terme d'erreur aléatoire, modélisant les variations de $Y$ non expliquées par $X$. Dans le cadre de ce cours, nous ferons les hypothèses suivantes : la variable aléatoire $\varepsilon$ est indépendente de des variables explicatives $X$, $\mathbb{E}[\varepsilon] = 0$ et $\mathrm{Var}(\varepsilon) = \sigma^2$. Le modèle @eq-model est général. Il sert de cadre pour l'ensemble des méthodes que nous allons étudier, même lorsque la forme explicite de $f$ n'est pas connue. La @fig-model illustre les différents éléments du modèle: les données observées $(X_i, Y_i)$, la fonction $f$ (en bleu) et les écarts aléatoires $\varepsilon_i$ représentés par des lignes pointillées.
 
 
+::: {.content-visible when-format="pdf"}
 ```{r}
 #| label: fig-model
 #| fig-cap: "Les différents éléments du modèle. Les points représentent les données observées $(X_i, Y_i)$. La courbe bleue représente la fonction $f$ et les lignes pointillées représentent l'erreur associée à chaque observation."
@@ -34,7 +35,7 @@ set.seed(42)
 # 1. Generate data
 n <- 100
 x <- sort(runif(n, 0, 2 * pi))
-f_x <- sin(x)
+f_x <- 4 * x * (1 - x) * log(x) + 2
 epsilon <- rnorm(n, mean = 0, sd = 0.3)
 y <- f_x + epsilon
 
@@ -58,16 +59,61 @@ ggplot(data, aes(x, y)) +
   theme_minimal()
 
 ```
+:::
 
+
+::: {.content-visible when-format="html"}
+```{r}
+#| eval: false
+
+library(tibble)
+library(dplyr)
+
+generate_noisy_data <- function(n = 100, noise_levels = c(0, 0.1, 0.3, 0.5)) {
+  # x values (avoid 0 for log)
+  x_vals <- seq(0.01, 0.99, length.out = n)
+  
+  # True function
+  f <- function(x) 4 * x * (1 - x) * log(x) + 2
+  
+  # Generate data for each noise level
+  data <- lapply(noise_levels, function(sigma) {
+    y_true <- f(x_vals)
+    y_noisy <- y_true + rnorm(n, mean = 0, sd = sqrt(sigma))
+    
+    tibble(
+      x = x_vals,
+      y = y_noisy,
+      noise = sigma
+    )
+  }) %>% bind_rows()
+  
+  return(data)
+}
+
+# Example usage
+set.seed(123)
+
+noise_levels <- seq(0, 0.5, by=0.01)
+df <- generate_noisy_data(noise_levels = noise_levels)
+write.csv(df, './data.csv')
+```
 
 ```{ojs}
+#| label: fig-model
+#| fig-cap: "Les différents éléments du modèle. Les points représentent les données observées $(X_i, Y_i)$. La courbe bleue représente la fonction $f$ et les lignes pointillées représentent l'erreur associée à chaque observation."
+#| warning: false
+#| eval: true
+
 data = FileAttachment("../../include/data/data.csv").csv({ typed: true })
 
 viewof noise = Inputs.range(
-  [0.1, 0.5], 
-  {value: 0.3, step: 0.2, label: tex`\sigma^2`}
+  [0.01, 0.5], 
+  {value: 0.25, step: 0.01, label: tex`\sigma^2`}
 )
+```
 
+```{ojs}
 filtered = data.filter(function(df) {
   return df.noise == noise;
 })
@@ -76,14 +122,38 @@ true_curve = data.filter(function(df) {
   return df.noise == 0;
 })
 
+errors = filtered.map(f => {
+  const location = true_curve.find(loc => loc.x === f.x);
+  return { ...f, y_end: location?.y };
+})
+
+
 Plot.plot({
+  grid: true,
+  x: {
+    domain: [0, 1],
+    label: "X",
+  },
+  y: {
+    domain: [0, 3],
+    label: "Y",
+  },
   marks: [
-    Plot.dot(filtered, {x: "x", y: "y"}),
-    Plot.line(true_curve, {x: "x", y: "y"})
+    Plot.dot(filtered, {x: "x", y: "y", fill: "#444444", r: 3}),
+    Plot.line(true_curve, {x: "x", y: "y", stroke: "#B0E1FA", strokeWidth: 5}),
+    Plot.link(errors, {
+      x1: "x",
+      x2: "x",
+      y1: "y",
+      y2: "y_end",
+      stroke: "#AAAAAA",
+      strokeDasharray: "5,5",
+    })
   ]
 })
-```
 
+```
+:::
 
 Dans la suite du cours, nous verrons différentes méthodes permettant d'estimer la fonction $f$ à partir de données. Cependant avant d'étudier comment contruire un estimateur $\widehat{f}$ de $f$, nous allons nous interroger sur la qualité d'un tel estimateur : que signifie "bien estimer" $f$ ? Et comment évaluer la qualité de l'estimation ? 
 
