--- a/contents/generalities/04-bias-variance.qmd
+++ b/contents/generalities/04-bias-variance.qmd
@@ -108,8 +108,6 @@ write.csv(df, './data.csv')
 ```
 
 ```{ojs}
-//| label: fig-model-html
-//| fig-cap: "Les différents éléments du modèle. Les points représentent les données observées $(X_i, Y_i)$. La courbe bleue représente la fonction $f$ et les lignes pointillées représentent l'erreur associée à chaque observation."
 //| warning: false
 //| eval: true
 //| echo: false
@@ -134,6 +132,15 @@ errors = filtered.map(f => {
   return { ...f, y_end: location?.y };
 })
 
+```
+
+
+```{ojs}
+//| label: fig-model-html
+//| fig-cap: "Les différents éléments du modèle. Les points représentent les données observées $(X_i, Y_i)$. La courbe bleue représente la fonction $f$ et les lignes pointillées représentent l'erreur associée à chaque observation."
+//| warning: false
+//| eval: true
+//| echo: false
 
 Plot.plot({
   grid: true,
