--- a/contents/generalities/05-model-evaluation.qmd
+++ b/contents/generalities/05-model-evaluation.qmd
@@ -36,30 +36,35 @@ Add exemple!
 
 
 ::: {.callout-tip icon=false}
-## Comment choisir comment découper le jeu de données ? 
+## Comment choisir la taille des sous-ensembles ? 
 
-La réponse simple : avec de la pratique et une connaissance du domaine. S'il y a beaucoup de données, on peut faire 50-50. Sinon, on peut partir un 70-30.
+En général :
+
+* Si l'on dispose d'un grand nombre d'observations (disons plusieurs milliers), on peut faire une division $50-50$.
+
+* Si l'on dispose de moins d'observations, on préférera garder plus d'observations pour l'entraînement. On peut, par exemple, faire une division $70-30$ ou $80-20$.
+
+Cependant, il n'existe pas de règle universelle. Le bon choix dépend du contexte, de la complexité du modèle et de la quantité de données disponibles.
 
 :::
 
-Désavantage de la méthode :
+La méthode a cependant deux inconvénients. Le premier est que l'estimation de l'erreur est instable. En effet, la valeur de l'erreur de prédiction dépend des observations qui sont dans le jeu de validation. Un autre jeu de validation peut donner un résultat différent. Le deuxième est qu'il y a moins de données pour ajuster le modèle. Comme une partie des données est réservée à la validation, le modèle est appris sur un ensemble plus petit, et cela peut donc surestimer son erreur réelle par rapport à s'il avait été appris sur l'ensemble de données complet.
 
-1. L'erreur de prédiction calculée sur le jeu de données de validation peut être très variable. En effet, elle dépend du nombre d'observations dans le jeu de validation et de quelles sont ses données.
-
-2. On a moins de données pour apprendre le modèle. Comme les modèles ont tendance à moins bien apprendre avec moins de données, l'estimation de l'erreur sur le jeu de validation a tendance à surestimer l'erreur que l'on aurait avec un jeu de test et un modèle appris sur le jeu de données complet.
 
 
 ## Validation croisée 
 
-Comme l'approche par jeu de données de validation, la validation croisée consiste à faire des sous-ensembles du jeu de données. L'approche consiste à découper de façon aléatoire l'ensemble des observations en $K$ groupes de taille équivalanetes. Le premier sous-ensemble est utilisé comme jeu de données de validation et le modèle est appris sur les $K - 1$ autres sous-ensembles. L'erreur de prédiction est calculé sur le premier sous-ensemble. Cette procédure est faite $K$ fois; à chaque un différent sous-ensemble est utilisé comme jeu de données de validation. À la fin, on a donc $K$ valeurs pour l'erreur de prédiction. On calcule enfin la moyenne des $K$ valeurs de prédiction.
+Pour contourner les limites de l'approche précédente, on utilise souvent la **validation croisée** (*cross-validation*). Cette méthode est plus robuste et plus stable. Le principe est de répéter l'approche par jeu de validation plusieurs sur différents sous-ensembles du jeu de données.
+
+L'approche consiste à découper aléatoirement l'ensemble des observations en $K$ sous-ensembles de taille équivalentes (appelés *folds*). Le premier *fold* est utilisé comme jeu de données de validation et le modèle est ajusté sur les $K - 1$ *folds* restant. L'erreur de prédiction est calculé sur le premier *fold*. Cette procédure est répèté $K$ fois; à chaque fois, un différent *fold* est utilisé comme jeu de données de validation. À la fin, on a donc $K$ valeurs pour l'erreur de prédiction. On calcule enfin la moyenne des $K$ valeurs de prédiction.
 
 ![Schéma de l'approche par validation croisée](../../include/cross-validation.png)
 
 Add exemple!
 
 ::: {.callout-tip icon=false}
-## Comment choisir le nombre de sous-ensemble ? 
+## Comment choisir le nombre de sous-ensembles $K$ ? 
 
-En pratique, on utilise $K = 5$ ou $K = 10$. Cela a un avantage computationnel car le modèle doit être appris $K$ fois. 
+En pratique, on utilise souvent $K = 5$ ou $K = 10$. L'avantage de limiter $K$ est de limiter le coût computationnel car le modèle doit être ajusté $K$ fois. Dans le cas limite où $K = n$, i.e. $K$ est égal au nombre d'observations dans le jeu de données, on parle de validation croisée *leave-one-out* (LOOCV). Dans ce cas, chaque observation sert une fois de validation. 
 
 :::
