--- a/contents/generalities/05-model-evaluation.qmd
+++ b/contents/generalities/05-model-evaluation.qmd
@@ -56,9 +56,9 @@ La méthode a cependant deux inconvénients. Le premier est que l'estimation de 
 
 Pour contourner les limites de l'approche précédente, on utilise souvent la **validation croisée** (*cross-validation*). Cette méthode est plus robuste et plus stable. Le principe est de répéter l'approche par jeu de validation plusieurs sur différents sous-ensembles du jeu de données.
 
-L'approche consiste à découper aléatoirement l'ensemble des observations en $K$ sous-ensembles de taille équivalentes (appelés *folds*). Le premier *fold* est utilisé comme jeu de données de validation et le modèle est ajusté sur les $K - 1$ *folds* restant. L'erreur de prédiction est calculé sur le premier *fold*. Cette procédure est répèté $K$ fois; à chaque fois, un différent *fold* est utilisé comme jeu de données de validation. À la fin, on a donc $K$ valeurs pour l'erreur de prédiction. On calcule enfin la moyenne des $K$ valeurs de prédiction.
+L'approche consiste à découper aléatoirement l'ensemble des observations en $K$ sous-ensembles de taille équivalentes (appelés *folds*). Le premier *fold* est utilisé comme jeu de données de validation et le modèle est ajusté sur les $K - 1$ *folds* restant. L'erreur de prédiction est calculé sur le premier *fold*. Cette procédure est répèté $K$ fois; à chaque fois, un différent *fold* est utilisé comme jeu de données de validation. À la fin, on a donc $K$ valeurs pour l'erreur de prédiction. On calcule enfin la moyenne des $K$ valeurs de prédiction. La @fig-schema-cv présente un schéma de cette approche.
 
-![Schéma de l'approche par validation croisée](../../include/cross-validation.png)
+![Schéma de l'approche par validation croisée](../../include/cross-validation.png){#fig-schema-cv}
 
 Add exemple!
 
